--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						</p>
 	
 	                    <p>I have zero experience in Web development, and from everything I have seen so far I can tell that this will be a 
-							challenge. But so is the case with everthing new, I look forward to the challenge.</p>
+						   challenge. But so is the case with everthing new, I look forward to the challenge.</p>
 	                            
 	                    <p>I spent a large part of my military career in Law Enforccement, with my experience in physical security as well 
 						   as cyber in the IT field I hope to put my new web development skills to good use.
@@ -67,7 +67,8 @@
 						
 	                </div>      
 	            </div>
-	         </div> <!--END OF STICKY FOOTER-->
+			 </div> 
+			 <!--END OF STICKY FOOTER-->
 	
 
 	         <!--START OF FOOTER-->
