--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en-US"> <!--<![endif]-->
 <!--if you're using IE what is wrong with you?!!-->
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +14,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
       
       <style>
+
 body {
     background-color: #dddddd;
     margin-top: 0px;
@@ -42,6 +44,7 @@ body {
                     </nav>
                 </div>
             </header>
+
             <!--START OF MAIN CONTENT-->
             <div id = "mainContentWrapper">
                 <div id = "aboutMeWrapper">
@@ -61,7 +64,8 @@ body {
 
                 </div>      
             </div>
-        </div> <!--END OF STICKY WRAPPER-->
+        </div>
+        <!--END OF STICKY WRAPPER-->
 
         <div id = "outerFooter">
         <footer>
